--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elige una opción</title>
-    <link rel="stylesheet" href="css/styles.css"> <!-- Enlace al CSS -->
+    <link rel="stylesheet" href="https://itzadri-19.github.io/ProyectoMiamor/css/styles.css"> <!-- Enlace al CSS -->
 </head>
 <body>
     <div class="button-container">
